@@ -1,56 +1,0 @@
-# Copyright (C) 1997, 1998, 1999, 2000, 2001, 2002, 2003 Free Software
-# Foundation, Inc.
-#
-# This file is part of DejaGnu.
-#
-# DejaGnu is free software; you can redistribute it and/or modify it
-# under the terms of the GNU General Public License as published by
-# the Free Software Foundation; either version 2 of the License, or
-# (at your option) any later version.
-#
-# DejaGnu is distributed in the hope that it will be useful, but
-# WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-# General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with DejaGnu; if not, write to the Free Software Foundation,
-# Inc., 51 Franklin Street - Fifth Floor, Boston, MA 02110-1301, USA.
-
-# There is currently no ARC simulator.  This exists so gcc compile.exp testing
-# works.
-
-# This is a list of toolchains that are supported on this board.
-set_board_info target_install ${target_triplet}
-
-# Load the generic configuration for this board. This will define a basic set
-# of routines needed by the tool to communicate with the board.
-load_generic_config "sim"
-
-# basic-sim.exp is a basic description for the standard Cygnus simulator.
-load_base_board_description "basic-sim"
-
-# "arc" is the name of the sim subdir.
-setup_sim arc
-
-# No multilib options needed by default.
-process_multilib_options ""
-
-# We only support newlib on this target. We assume that all multilib
-# options have been specified before we get here.
-
-set_board_info compiler  "[find_gcc]"
-set_board_info cflags    "[libgloss_include_flags] [newlib_include_flags]"
-set_board_info ldflags   "[libgloss_link_flags] ${xldflags} [newlib_link_flags]"
-# No linker script needed.
-set_board_info ldscript ""
-
-# The simulator doesn't return exit statuses and we need to indicate this;
-# the standard GCC wrapper will work with this target.
-set_board_info needs_status_wrapper  1
-# Doesn't pass arguments or signals, can't return results, and doesn't
-# do inferiorio.
-set_board_info noargs 1
-set_board_info gdb,nosignals 1
-set_board_info gdb,noresults 1
-set_board_info gdb,noinferiorio 1
